--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,13 +4,14 @@ plugins {
     id 'kotlin-kapt'
     id 'kotlin-parcelize'
     id 'dagger.hilt.android.plugin'
+    id 'com.google.gms.google-services'
 }
 
 android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.plcoding.mapscomposeguide"
+        applicationId "com.example.kbbqreview"
         minSdk 24
         targetSdk 32
         versionCode 1
@@ -55,8 +56,9 @@ dependencies {
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.0'
-    implementation 'androidx.activity:activity-compose:1.3.1'
+    implementation 'androidx.activity:activity-compose:1.5.0'
     implementation 'com.google.android.libraries.places:places:2.6.0'
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.2.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -92,4 +94,28 @@ dependencies {
 
     // Kotlin Extensions and Coroutines support for Room
     implementation "androidx.room:room-ktx:2.4.1"
+
+    //Firebase
+    implementation platform('com.google.firebase:firebase-bom:30.2.0')
+
+    //Firebase Storage
+    implementation 'com.google.firebase:firebase-storage-ktx'
+
+    //Firebase Analytics
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+
+    //Coil
+    implementation("io.coil-kt:coil-compose:2.1.0")
+
+    //Lottie
+    implementation 'com.airbnb.android:lottie-compose:5.0.3'
+
+    //Permissions
+    implementation("com.google.accompanist:accompanist-permissions:0.18.0")
+
+    //CameraX
+    def camerax_version = "1.2.0-alpha03"
+    implementation("androidx.camera:camera-camera2:$camerax_version")
+    implementation("androidx.camera:camera-lifecycle:$camerax_version")
+    implementation("androidx.camera:camera-view:$camerax_version")
 }
