--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,13 @@
 buildscript {
+    repositories {
+        google()  // Google's Maven repository
+    }
     ext {
         compose_version = '1.1.0'
     }
     dependencies {
         classpath "com.google.dagger:hilt-android-gradle-plugin:2.40.5"
+        classpath 'com.google.gms:google-services:4.3.13'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
@@ -11,6 +15,7 @@ plugins {
     id 'com.android.library' version '7.1.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
 }
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
