Updates: - Camera works well now. - Implemented some stuff for Google Places. No clue how it works...
To-Do:
- Camera needs to take and save a picture.
- Have to check the gallery.
- Make a little icon so the user can see photos to be uploaded.

Issues:
- Permissions seem to be a bit wonky. Sometimes it works, sometimes it doesn't.
- Can't use the files from the gallery.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -118,4 +118,9 @@ dependencies {
     implementation("androidx.camera:camera-camera2:$camerax_version")
     implementation("androidx.camera:camera-lifecycle:$camerax_version")
     implementation("androidx.camera:camera-view:$camerax_version")
+
+    //Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+
+
 }
