Updates: - Starting working on the story feed. Added a image slider. Doesn't work well though... - Can now get location from review screen. Doesn't look pretty, but it works.
To-Do:
- Make camera look more functional.
- Learn to upload to firebase

Issues:
- Permissions is still pretty weird.
- App times out when trying to change screen from maps.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -124,5 +124,8 @@ dependencies {
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
 
+    //Accompanist - Pager
+    implementation "com.google.accompanist:accompanist-pager:0.24.2-alpha"
+
 
 }
