Updates: - Added uploading to firebase. - Updated story feed a bit.
To-Do:
- Make camera look more functional.
- Learn to upload to firebase.
- Learn to download from firebase. Might be hard since all reviews are saved under the user's folder. Maybe we can fix that or we have to make a new collection...

Issues:
- Permissions is still pretty weird.
- App times out when trying to change screen from maps.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -127,5 +127,11 @@ dependencies {
     //Accompanist - Pager
     implementation "com.google.accompanist:accompanist-pager:0.24.2-alpha"
 
+    //Coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.3"
+
+    //Authentication
+    implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
+    implementation 'com.google.android.gms:play-services-auth:20.2.0'
 
 }
