Updates: - can now get information properly from firebase. It seems kinda wonky, but it works. - added geocoding to the get location. Have to change the StoredPlace to reflect an address as well. - Changed some things in the review screen. Mutable states keep their state when screen changes. Submit button clears out all of the data.
To-Do:
- Make camera look more functional.
- Make a refresh button for story.
- Fix focus on review.

Issues:
- Permissions is still pretty weird.
- App times out when trying to change screen from maps.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -124,8 +124,9 @@ dependencies {
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
 
-    //Accompanist - Pager
+    //Accompanist
     implementation "com.google.accompanist:accompanist-pager:0.24.2-alpha"
+    implementation "com.google.accompanist:accompanist-swiperefresh:0.26.0-alpha"
 
     //Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.3"
