Updates: - Adding a login screen. Currently FB sign in works. - Moving most functions out of ApplicationViewModel.kt, and into their own individual view models. This makes things much smoother and more organized, I feel.
To-Do:
- Make proper sign in screen.
- Fix bottom sheet. (Needs more functions and it should look better. Also should blur or shade the background)
- Make camera look more functional.
- Populate map with each location. Learn how to measure distance from current location. Oof.
- Have to make a proper sign in and profile screen.
- Make a user id for each profile. Also add in google sign in.

Issues:
- Permissions is still pretty weird.
- App times out when trying to change screen from maps.
- App sometimes dies when sliding through the images downloaded from firebase.
- Firebase doesn't always load all the content, or at least, the main screen doesn't load it all right away.
- Map is acting weird in emulator.
- Profile bottom sheet doesn't look right. Need to add items and make it overlay the background.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ android {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
+
 }
 
 dependencies {
@@ -127,16 +128,20 @@ dependencies {
     //Accompanist
     implementation "com.google.accompanist:accompanist-pager:0.24.2-alpha"
     implementation "com.google.accompanist:accompanist-swiperefresh:0.26.0-alpha"
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.26.0-alpha"
 
     //Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.3"
 
     //Authentication
-    implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
+//    implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
     implementation 'com.google.android.gms:play-services-auth:20.2.0'
     implementation 'com.google.firebase:firebase-auth-ktx'
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.4'
+
+    //Facebook
+    implementation 'com.facebook.android:facebook-android-sdk:14.1.0'
 
 
 }
