Updates: - Still working on editing. - Updated some of the UI for signing in. - Can delete posts from firestore now - Checks current distance from user. Only checks once the posts have been captured though. - Added distance to the map restaurant list sheet. - Started working on the share function. Check out open graph tags - Address button now works. - Gets user avatar now. - Some UI updates. Scrim and fonts. - Profile screen now loads posts only for that user. - Adding a login screen. Currently FB sign in works. - Added Google to login screen. Gotta make it look pretty. - Moving most functions out of ApplicationViewModel.kt, and into their own individual view models. This makes things much smoother and more organized, I feel.
To-Do:
- Make proper sign in screen.
- Fix bottom sheet. (Needs more functions and it should look better. Also should blur or shade the background)
- Make camera look more functional.

Issues:
- Profile screen loads twice. Sing in screen takes over the whole screen, no way to exit and it doesn't leave.
- Images don't load. I think the reason is because the images are loaded, and then it changes to an empty Photo(). Maybe I can solve this by getting rid of the empty photo?
- Permissions is still pretty weird.
- App times out when trying to change screen from maps
- Profile bottom sheet doesn't look right. Need to add items and make it overlay the background.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -130,6 +130,7 @@ dependencies {
     implementation "com.google.accompanist:accompanist-swiperefresh:0.26.0-alpha"
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.26.0-alpha"
     implementation "com.google.accompanist:accompanist-flowlayout:0.26.2-beta"
+    implementation("io.coil-kt:coil-compose:2.0.0-rc01")
 
     //Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.3"
@@ -143,6 +144,7 @@ dependencies {
 
     //Facebook
     implementation 'com.facebook.android:facebook-android-sdk:14.1.0'
+
 
 
 }
