Updates: - Updating sign in screen
To-Do:
- Make proper sign in screen.
- Fix bottom sheet. (Needs more functions and it should look better. Also should blur or shade the background)
- Make camera look more functional.

Issues:
- Images don't load. I think the reason is because the images are loaded, and then it changes to an empty Photo(). Maybe I can solve this by getting rid of the empty photo?
- Permissions is still pretty weird.
- App times out when trying to change screen from maps
- Profile bottom sheet doesn't look right. Need to add items and make it overlay the background.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
     <uses-permission android:name="android.permission.ACCESS_MEDIA_LOCATION" />
 
     <application
-        android:name=".K_BBQ_Review"
+        android:name="com.example.kbbqreview.K_BBQ_Review"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -25,12 +25,12 @@
         android:theme="@style/Theme.KBBQReview"
         tools:targetApi="31">
         <activity
-            android:name=".CameraActivity"
+            android:name="com.example.kbbqreview.CameraActivity"
             android:exported="false"
             android:label="@string/title_activity_camera"
             android:theme="@style/Theme.KBBQReview" />
         <activity
-            android:name=".MainActivity"
+            android:name="com.example.kbbqreview.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.KBBQReview">
