--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.kbbqreview"
+        applicationId "com.jagerapps.kbbqreview"
         minSdk 24
         targetSdk 33
         versionCode 1
