Update: - Still working on login. - Can now delete and update a user profile (avatar and name).

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -145,6 +145,8 @@ dependencies {
     //Facebook
     implementation 'com.facebook.android:facebook-android-sdk:14.1.0'
 
+    //Capture - For taking a bitmap capture of the review
+    implementation "dev.shreyaspatil:capturable:1.0.3"
 
 
 }
