Update: - Sharing will just share a link to the first photo, address, and the name of the place.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -51,10 +51,10 @@
                 android:resource="@xml/file_paths" />
         </provider>
         <provider
-            android:name="androidx.core.content.FileProvider"
-            android:authorities="com.example.kbbqreview.util.provider"
+            android:name=".util.GenericFileProvider"
+            android:authorities="${applicationId}.util.provider"
             android:exported="false"
-            android:grantUriPermissions="true">
+            android:grantUriPermissions ="true">
             <!-- ressource file to create -->
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
