--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+    implementation "androidx.compose.material3:material3:1.1.0-alpha02"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.0'
     implementation 'androidx.activity:activity-compose:1.5.0'
     implementation 'com.google.android.libraries.places:places:2.6.0'
@@ -144,6 +145,8 @@ dependencies {
 
     //Capture - For taking a bitmap capture of the review
     implementation "dev.shreyaspatil:capturable:1.0.3"
+
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
 
 
 }
